# mmseqs_ccc

./: CMakeLists.txt  README.md  check_index.py  check_index2.py  check_index3.py  check_index4.py  check_metis_connectivity.cpp  check_tsv_connectivity.cpp  extract_cluster.cpp  extract_cluster_to_metis.cpp  extract_cluster_to_metis2.cpp  extract_cluster_to_metis3.cpp  main.cpp  partition_graph.py  split_by_partition.cpp
test/: filtered_db.0  filtered_db.1  filtered_db.10  filtered_db.11  filtered_db.12  filtered_db.13  filtered_db.14  filtered_db.15  filtered_db.16  filtered_db.17  filtered_db.18  filtered_db.19  filtered_db.2  filtered_db.20  filtered_db.21  filtered_db.22  filtered_db.23  filtered_db.24  filtered_db.25  filtered_db.26  filtered_db.27  filtered_db.28  filtered_db.29  filtered_db.3  filtered_db.30  filtered_db.31  filtered_db.32  filtered_db.33  filtered_db.34  filtered_db.35  filtered_db.36  filtered_db.37  filtered_db.38  filtered_db.39  filtered_db.4  filtered_db.40  filtered_db.41  filtered_db.42  filtered_db.43  filtered_db.44  (+80 more)
test/tmp/: latest
test/tmp/16337214823243507646/: pref_0.index
